# DCC

./: .clang-format  .gitignore  .licenserc.json  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  TODO.md  idf_component.yml
.github/workflows/: build.yml  docs.yml  license.yml  release.yml  tests.yml
data/: transmission.pu
examples/: CMakeLists.txt
examples/analyzer/: CMakeLists.txt  index.html  main.cpp
examples/cypher/: CMakeLists.txt  index.html
examples/cypher/src/: about.cpp  about.hpp  config.cpp  config.hpp  datagram_builder.cpp  datagram_builder.hpp  datagrams.cpp  datagrams.hpp  demo.cpp  demo.hpp  layout.cpp  layout.hpp  main.cpp  menu.cpp  menu.hpp  packet_builder.cpp  packet_builder.hpp  packets.cpp  packets.hpp  platform.cpp  platform.hpp  query.cpp  query.hpp  state.hpp  style.cpp  style.hpp  utility.cpp  utility.hpp  zimo_rgba.hpp
examples/esp32/: CMakeLists.txt  README.md
examples/esp32/main/: app_main.cpp
examples/repl/: CMakeLists.txt  command_station.cpp  command_station.hpp  decoder.cpp  decoder.hpp  fifo.hpp  main.cpp
examples/repl/src/: command_station.cpp  command_station.hpp  decoder.cpp  decoder.hpp  fifo.hpp  main.cpp
examples/rmt/: .gitignore
examples/rmt/main/: CMakeLists.txt  app_main.cpp  idf_component.yml
examples/stm32/: CMakeLists.txt
examples/stm32/src/: bsp.c  bsp.h  command_station.cpp  command_station.hpp  decoder.cpp  decoder.hpp
include/: rmt_dcc_encoder.h
include/dcc/: address.hpp  address_assign.hpp  address_group.hpp  addresses.hpp  bit.hpp  crc8.hpp  dcc.hpp  direction.hpp  exor.hpp  instruction.hpp  packet.hpp  speed.hpp  timing.hpp  utility.hpp  zimo_id.hpp
include/dcc/bidi/: acks.hpp  baudrate.hpp  bundled_channels.hpp  channel.hpp  channel1.hpp  channel2.hpp  datagram.hpp  direction_status_byte.hpp  dissector.hpp  dyn.hpp  kmh.hpp  nak.hpp  speed.hpp  temperature.hpp  timing.hpp  track_voltage.hpp  utility.hpp
include/dcc/bidi/app/: adr_high.hpp  adr_low.hpp  block.hpp  cv_auto.hpp  decoder_state.hpp  decoder_unique.hpp  dyn.hpp  error.hpp  ext.hpp  info.hpp  info1.hpp  pom.hpp  search.hpp  srq.hpp  stat1.hpp  stat4.hpp  test.hpp  time.hpp  xpom.hpp  zeit.hpp
include/dcc/rx/: addresses.hpp  async_readable.hpp  async_writable.hpp  backoff.hpp  bidi.hpp  crtp_base.hpp  decoder.hpp  east_west.hpp  east_west_man.hpp  errorable.hpp  high_current.hpp  mdu_entry.hpp  operable.hpp  readable.hpp  serviceable.hpp  timing.hpp  writable.hpp
include/dcc/rx/bidi/: backoff.hpp  crtp_base.hpp  high_current.hpp  logon_backoff.hpp  packet.hpp
include/dcc/tx/: addresses.hpp  base.hpp  bidi_phase.hpp  command_station.hpp  config.hpp  crtp_base.hpp  ipacket.hpp  itimings.hpp  pre_cutout.hpp  queued_packet.hpp  timing.hpp  timings.hpp  timings_adapter.hpp  track_outputs.hpp
src/: rmt_dcc_encoder.c
tests/: CMakeLists.txt  address.cpp  crc8.cpp  encode_decode_test.cpp  encode_decode_test.hpp  instruction.cpp  main.cpp  speed.cpp  utility.hpp
tests/bidi/: datagram_size.cpp  dissector.cpp  encode_decode.cpp  encode_decode_test.cpp  encode_decode_test.hpp
tests/rx/: advanced_operations.cpp  app_adr.cpp  app_dyn.cpp  app_pom.cpp  app_search.cpp  app_tos.cpp  backoff.cpp  backoff_test.cpp  backoff_test.hpp  bidi_app_adr.cpp  bidi_app_pom.cpp  bidi_app_tos.cpp  bidi_backoff.cpp  bidi_backoff_test.cpp  bidi_backoff_test.hpp  bidi_logon_backoff.cpp  bidi_logon_backoff_test.cpp  bidi_logon_backoff_test.hpp  bidi_test.cpp  bidi_test.hpp  broadcast.cpp  consist.cpp  consist_control.cpp  cv_access_long.cpp  cv_access_short.cpp  cv_access_xpom.cpp  cv_long.cpp  cv_short.cpp  decoder_lock.cpp  feature_expansion.cpp  function_group.cpp  logon.cpp  receive.cpp  rx_mock.hpp  rx_test.cpp  rx_test.hpp  scale_notch.cpp  scale_speed.cpp  service_mode.cpp  speed_direction.cpp  (+4 more)
tests/rx/bidi/: bidi_app_adr.cpp  bidi_app_dyn.cpp  bidi_backoff.cpp  bidi_test.cpp  bidi_test.hpp
tests/tx/: address.cpp  bytes.cpp  capacity.cpp  init.cpp  packet.cpp  service.cpp  size.cpp  timings.cpp  timings_adapter.cpp  transmit.cpp  transmit_p.cpp  transmit_t.cpp  tx_mock.hpp  tx_test.cpp  tx_test.hpp
